<resources>
    <string name="app_name">SMUCard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">用户登录</string>
    <string name="user_login_title">用户登录</string>
    <string name="copyright_string">©2018 Jsutech</string>
    <string name="check_code_tip">（请输入下方验证码，不区分大小写！点击图片刷新）</string>
    <string name="login_btn_text">登录</string>
    <string name="title_activity_home">首页</string>
    <string name="username_text">姓名</string>
    <string name="suid">学号/卡号</string>
    <string name="user_info">基本信息</string>
    <string name="charging">缴费充值</string>
    <string name="billing">账单查询</string>
    <string name="card_manage">卡片管理</string>
    <string name="share_app">分享应用</string>
    <string name="contact">联系开发者</string>
    <string name="about">关于</string>
    <string name="about_app">关于应用</string>
    <string name="user_agreement">最终用户协议</string>
    <string name="communicate">通信</string>

    <string name="user_bal_text">余额</string>
    <string name="card_bal_text">卡内余额</string>
    <string name="srun_package_text">网络套餐</string>
    <string name="srun_bal_text">网络余额</string>
    <string name="electricity_bal_text">电费余额</string>
    <string name="refreshing_text">正在刷新…</string>
    <string name="gender_text">性别</string>
    <string name="suid_text">编号</string>
    <string name="nationality_text">国家</string>
    <string name="role_text">身份</string>
    <string name="classification_text">类别</string>
    <string name="created_time_text">创建日期</string>
    <string name="account_status_text">账户状态</string>
    <string name="deposit_text">押金</string>
    <string name="pid_text">身份证号</string>
    <string name="address_text">地址</string>
    <string name="credit_text">银行卡号</string>
    <string name="department_text">部门</string>
    <string name="effective_area_text">有效区域</string>
    <string name="effective_date_text">有效期限</string>

</resources>
