<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/nav_menu">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/user_info" />
        <item
            android:id="@+id/nav_charging"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/charging" />
        <item
            android:id="@+id/nav_billing"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/billing" />
        <item
            android:id="@+id/nav_card_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/card_manage" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share_app"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact" />

        </menu>
    </item>
    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_user_agreement"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/user_agreement" />
        </menu>
    </item>
</menu>
